@@ -16,7 +16,7 @@ Features
   - SRFI-23 : Error Reporting Mechanism
   - SRFI-34 : Exception Handling for Programs
   - SRFI-38 : External Representation for Data with Shared Structure
-  - SRFI-60 : Integer as Bits
+  - SRFI-60 : Integer as Bits (partial)
   - SRFI-75 : R6RS Unicode data (partial)
 - Multibyte character support
 - Partial SIOD compatibility
