@@ -8,6 +8,8 @@ Overview of changes from 0.5.0-alpha (r2902 + local modifications)
 
   - Add lacking string predicates and complete all R5RS string procedures
 
+  - Support constant list (storage-compact does not)
+
   - Support constant vector (storage-compact is not yet)
 
   - Add quote-less vector literal check
